--- a/src/components/ParkingLotsMarkerContainer/ParkingLotMarker.scss
+++ b/src/components/ParkingLotsMarkerContainer/ParkingLotMarker.scss
@@ -10,6 +10,10 @@
   transform: rotate(-45deg);
   border-width: 2px;
 
+  &.hovered {
+    scale: 1.4;
+  }
+
   & > * {
     display: block;
     transform: rotate(45deg);
