--- a/src/components/SearchForm/searchForm.scss
+++ b/src/components/SearchForm/searchForm.scss
@@ -8,7 +8,7 @@ input#destination {
   padding: 1.5rem;
   border-radius: 0.4rem;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  padding-right: 3%;
+  padding-right: 3rem;
 
   &:focus {
     outline: none;
